# HttpServer

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: .clang-format  kill.sh
src/client/: CMakeLists.txt  client.cpp
src/common/: Acceptor.cpp  Acceptor.h  CMakeLists.txt  Channel.cpp  Channel.h  Epoll.cpp  Epoll.h  EventLoop.cpp  EventLoop.h  InetAddress.cpp  InetAddress.h  Server.cpp  Server.h  SockMgr.h  Socket.cpp  Socket.h  def.h  scoped_guard.h  utils.cpp  utils.h
src/server/: CMakeLists.txt  main.cpp  server.cpp
